--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
 opencv-python==4.8.1.78
 numpy==1.26.2
+pillow==10.1.0
 keras==2.15.0
 tensorflow==2.15.0
 pandas==2.1.3
 matplotlib==3.8.2
 seaborn==0.13.0
 scikit-learn==1.3.2
+flask-socketio==4.3.1
+python-engineio==3.13.2
+python-socketio==4.6.0
+eventlet==0.33.3
